# facebook-memcached-old

scripts/: mcstart  mcstats  mcstop  memcached-wrapper  memcachedctl
src/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  assoc.c  assoc.h  autogen.sh  binary_protocol.h  binary_sm.c  binary_sm.h  buckets.h  config.h.in  configure  configure.ac  conn_buffer.c  conn_buffer.h  flat_storage.c  flat_storage.h  flat_storage_support.h  generic.h  items.c  items.h  items_support.h  memcached.c  memcached.h  memory_pool.h  memory_pool_classes.h  sigseg.c  slabs.c  slabs.h  slabs_items.c  slabs_items.h  slabs_items_support.h  stats.c  stats.h  thread.c
src/doc/: Makefile.in  binary_sm.dot  memcached.1  protocol.txt
src/doc/CVS/: Entries  Repository  Root
src/scripts/: memcached-tool  populate-memcached
src/t/: 64bit.t  flush-all.t  flush-regex.t  stats-detail.t  stats.t  udp.t
src/t/lib/: MemcachedTest.pm
test/conn_buffer_tests/: SConstruct  init_test.c  memcached.c  memcached.h  test_suites.py
test/flat_storage_tests/: SConstruct  alloc_dealloc_test.c  alloc_dealloc_test.h  alloc_large_lru_evict_test.c  alloc_large_lru_evict_test.h  alloc_small_lru_evict_test.c  alloc_small_lru_evict_test.h  assoc.c  assoc.h  assoc_test.c  assoc_test.h  complex_alloc_test.c  complex_alloc_test.h  init_test.c  init_test.h  inline_test.c  inline_test.h  item_walk_test.c  item_walk_test.h  main.h  memcached.c  memcached.h  paging_test.c  paging_test.h  stats.h  test.py  test_suites.py
test/mcbench/: Makefile  README  main.c  socket.c
test/mcblaster/: Makefile  cpu.c  cpu.h  main.c  socket.c
test/metaget/: SConstruct  metaget_test.py
